<resources>
    <string name="app_name">Feedback Loop</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="volume_feedback">Volume Feedback</string>
    <string name="pressure_feedback">Pressure Feedback</string>
    <string name="flow_feedback">Flow Feedback</string>
    <string name="settings">Controls</string>
    <string name="up_arrow">up arrow</string>
    <string name="ip">IP</string>
    <string name="down_arrow">down arrow</string>
    <string name="ip_default">250</string>
</resources>