<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fragmentPPT"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <ImageButton
        android:id="@+id/buttonUp_fpeep"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/up_arrow"
        android:src="@drawable/up_small"
        app:layout_constraintEnd_toStartOf="@+id/textPPT"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:src="@drawable/up_small" />

    <EditText
        android:id="@+id/textPEEP"
        android:layout_width="122dp"
        android:layout_height="40dp"
        android:autofillHints=""
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/ip_default"
        app:layout_constraintEnd_toStartOf="@+id/buttonDn_fpeep"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/buttonUp_fpeep"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/buttonDn_fpeep"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/down_arrow"
        android:rotation="180"
        android:src="@drawable/up_small"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/textPEEP"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imagePEEP"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/ip"
        android:scaleX=".7"
        android:scaleY=".7"
        android:src="@drawable/peep"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textPEEP" />
</androidx.constraintlayout.widget.ConstraintLayout>